--- a/popup.html
+++ b/popup.html
@@ -65,6 +65,29 @@
 
             <!-- Progress View -->
             <div id="progressView" class="view">
+                <!-- Progress Stages -->
+                <div class="progress-stages">
+                    <div class="stage" id="stage-credentials">
+                        <div class="stage-icon">⏳</div>
+                        <div class="stage-label">Credentials</div>
+                    </div>
+                    <div class="stage-arrow">→</div>
+                    <div class="stage" id="stage-testing">
+                        <div class="stage-icon">⏳</div>
+                        <div class="stage-label">Testing</div>
+                    </div>
+                    <div class="stage-arrow">→</div>
+                    <div class="stage" id="stage-enumeration">
+                        <div class="stage-icon">⏳</div>
+                        <div class="stage-label">Enumeration</div>
+                    </div>
+                    <div class="stage-arrow">→</div>
+                    <div class="stage" id="stage-analysis">
+                        <div class="stage-icon">⏳</div>
+                        <div class="stage-label">Analysis</div>
+                    </div>
+                </div>
+
                 <div class="progress-container">
                     <div class="progress-bar">
                         <div id="progressFill" class="progress-fill"></div>
@@ -75,10 +98,27 @@
                 <div class="log-container">
                     <div id="logOutput" class="log-output"></div>
                 </div>
+
+                <button id="cancelScan" class="btn-secondary" style="margin-top: 16px;">Cancel Scan</button>
             </div>
 
             <!-- Results View -->
             <div id="resultsView" class="view">
+                <!-- Risk Score Card -->
+                <div class="risk-score-card">
+                    <div class="risk-score-header">
+                        <span class="risk-icon">🎯</span>
+                        <h3>Security Risk Score</h3>
+                    </div>
+                    <div class="risk-score-display">
+                        <div class="score-circle">
+                            <span id="riskScore" class="score-number">0</span>
+                            <span class="score-max">/100</span>
+                        </div>
+                        <div id="riskLevel" class="risk-level">LOW</div>
+                    </div>
+                </div>
+
                 <!-- Summary Card -->
                 <div id="summaryCard" class="summary-card">
                     <div class="summary-status">
@@ -101,13 +141,37 @@
                             <div class="stat-value safe" id="statBlocked">0</div>
                             <div class="stat-label">Protected</div>
                         </div>
+                        <div class="stat">
+                            <div class="stat-value warning" id="statExposedRows">0</div>
+                            <div class="stat-label">Rows Exposed</div>
+                        </div>
+                        <div class="stat">
+                            <div class="stat-value warning" id="statExposedColumns">0</div>
+                            <div class="stat-label">Columns Exposed</div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Critical Findings -->
+                <div id="criticalFindingsSection" class="section collapsible-section">
+                    <h3 class="section-toggle" data-section="findings">
+                        <span class="toggle-icon">▼</span>
+                        🚨 Critical Findings
+                    </h3>
+                    <div class="section-content" id="findings-content">
+                        <div id="criticalFindingsList" class="critical-findings-list"></div>
                     </div>
                 </div>
 
                 <!-- Credentials Found -->
-                <div id="credentialsSection" class="section">
-                    <h3>Discovered Credentials</h3>
-                    <div id="credentialsList" class="credentials-list"></div>
+                <div id="credentialsSection" class="section collapsible-section">
+                    <h3 class="section-toggle" data-section="credentials">
+                        <span class="toggle-icon">▼</span>
+                        Discovered Credentials
+                    </h3>
+                    <div class="section-content" id="credentials-content">
+                        <div id="credentialsList" class="credentials-list"></div>
+                    </div>
                 </div>
 
                 <!-- Filters -->
@@ -125,8 +189,12 @@
                 </div>
 
                 <!-- Tables List -->
-                <div id="tablesSection" class="section">
-                    <h3>Database Tables</h3>
+                <div id="tablesSection" class="section collapsible-section">
+                    <h3 class="section-toggle" data-section="tables">
+                        <span class="toggle-icon">▼</span>
+                        Database Tables
+                    </h3>
+                    <div class="section-content" id="tables-content">
 
                     <!-- Vulnerable Tables -->
                     <div id="vulnerableTables" class="table-group">
@@ -163,17 +231,23 @@
                         </div>
                         <div id="safeTablesList" class="table-list"></div>
                     </div>
+                    </div>
                 </div>
 
                 <!-- Actions -->
                 <div class="actions">
                     <div class="download-group">
+                        <button id="downloadPDF" class="btn-secondary">
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M14 2H6C5.46957 2 4.96086 2.21071 4.58579 2.58579C4.21071 2.96086 4 3.46957 4 4V20C4 20.5304 4.21071 21.0391 4.58579 21.4142C4.96086 21.7893 5.46957 22 6 22H18C18.5304 22 19.0391 21.7893 19.4142 21.4142C19.7893 21.0391 20 20.5304 20 20V8L14 2Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M14 2V8H20" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                            PDF Report
+                        </button>
                         <button id="downloadReport" class="btn-secondary">
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M14 2H6C5.46957 2 4.96086 2.21071 4.58579 2.58579C4.21071 2.96086 4 3.46957 4 4V20C4 20.5304 4.21071 21.0391 4.58579 21.4142C4.96086 21.7893 5.46957 22 6 22H18C18.5304 22 19.0391 21.7893 19.4142 21.4142C19.7893 21.0391 20 20.5304 20 20V8L14 2Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                 <path d="M14 2V8H20" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                <path d="M12 18V12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                <path d="M9 15L12 18L15 15" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                             JSON
                         </button>
@@ -181,9 +255,6 @@
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M14 2H6C5.46957 2 4.96086 2.21071 4.58579 2.58579C4.21071 2.96086 4 3.46957 4 4V20C4 20.5304 4.21071 21.0391 4.58579 21.4142C4.96086 21.7893 5.46957 22 6 22H18C18.5304 22 19.0391 21.7893 19.4142 21.4142C19.7893 21.0391 20 20.5304 20 20V8L14 2Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                 <path d="M14 2V8H20" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                <path d="M8 13H16" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                <path d="M8 17H16" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                <path d="M10 9H8" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                             CSV
                         </button>
