--- a/popup.html
+++ b/popup.html
@@ -237,6 +237,12 @@
                 <!-- Actions -->
                 <div class="actions">
                     <div class="download-group">
+                        <button id="downloadMigration" class="btn-secondary" title="Download RLS migration SQL">
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M12 2L2 7V17L12 22L22 17V7L12 2Z" stroke="currentColor" stroke-width="2"/>
+                            </svg>
+                            Migration SQL
+                        </button>
                         <button id="downloadPDF" class="btn-secondary">
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M14 2H6C5.46957 2 4.96086 2.21071 4.58579 2.58579C4.21071 2.96086 4 3.46957 4 4V20C4 20.5304 4.21071 21.0391 4.58579 21.4142C4.96086 21.7893 5.46957 22 6 22H18C18.5304 22 19.0391 21.7893 19.4142 21.4142C19.7893 21.0391 20 20.5304 20 20V8L14 2Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -269,13 +275,22 @@
                     <div class="error-icon">⚠️</div>
                     <h3>Scan Failed</h3>
                     <p id="errorMessage"></p>
+                    <div class="error-details" style="display: none;"></div>
                     <button id="retryButton" class="btn-primary">Try Again</button>
                 </div>
             </div>
         </main>
+
+        <!-- Footer -->
+        <footer class="app-footer">
+            <span class="version">v2.1.0</span>
+            <span class="separator">•</span>
+            <span class="credits">Supabase Security Scanner</span>
+        </footer>
     </div>
 
     <script src="utils.js"></script>
+    <script src="remediation-generator.js"></script>
     <script src="popup.js"></script>
 </body>
 </html>
